fixing the publish action workflow yml

--- a/.github/workflows/publish-jekyll.yml
+++ b/.github/workflows/publish-jekyll.yml
@@ -12,9 +12,8 @@ jobs:
       -
         name: Deploy
         if: success()
-        uses: ./
+        uses: crazy-max/ghaction-github-pages@v2
         with:
           target_branch: master
-          build_dir: public
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
