--- a/.github/workflows/publish-jekyll.yml
+++ b/.github/workflows/publish-jekyll.yml
@@ -15,5 +15,6 @@ jobs:
         uses: crazy-max/ghaction-github-pages@v2
         with:
           target_branch: master
+          build_dir: ./
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
